# gltforge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/gltforge/: Cargo.toml
crates/gltforge-cli/: Cargo.toml
crates/gltforge-cli/src/: error.rs  main.rs
crates/gltforge-unity/: Cargo.toml
crates/gltforge-unity-core/: Cargo.toml
crates/gltforge-unity-core/src/: lib.rs  unity_game_object.rs  unity_image.rs  unity_mesh.rs  unity_pbr_metallic_roughness.rs  unity_submesh.rs  unity_transform.rs
crates/gltforge-unity-export/: Cargo.toml
crates/gltforge-unity-export/src/: build.rs  error.rs  export_context.rs  lib.rs  mesh_data.rs  node_data.rs  submesh_data.rs
crates/gltforge-unity/src/: convert.rs  gltf_primitive_data.rs  lib.rs  mesh.rs  unity_game_object.rs  unity_gltf.rs  unity_image.rs  unity_indices.rs  unity_mesh.rs  unity_node.rs  unity_node_transform.rs  unity_pbr_metallic_roughness.rs  unity_scene.rs  unity_submesh.rs
crates/gltforge-unity/src/error/: mod.rs
crates/gltforge-unity/tests/: a_beautiful_game.rs  box.rs  cesium_man.rs  normal_tangent_mirror.rs  triangle.rs
crates/gltforge/src/error/: mod.rs
crates/gltforge/src/error/parse/: mod.rs
crates/gltforge/src/error/schema/: mod.rs
crates/gltforge/src/parser/: mod.rs
crates/gltforge/src/schema/: asset.rs  buffer.rs  extensions.rs  extras.rs  gltf.rs  gltf_id.rs  image.rs  mod.rs  node.rs  scene.rs  skin.rs
crates/gltforge/src/schema/accessor/: accessor_type.rs  component_type.rs  mod.rs
crates/gltforge/src/schema/accessor/sparse/: indices.rs  mod.rs  values.rs
crates/gltforge/src/schema/animation/: interpolation.rs  mod.rs  path.rs  sampler.rs
crates/gltforge/src/schema/animation/channel/: mod.rs  target.rs
crates/gltforge/src/schema/buffer_view/: mod.rs  target.rs
crates/gltforge/src/schema/camera/: camera_type.rs  mod.rs  orthographic.rs  perspective.rs
crates/gltforge/src/schema/material/: alpha_mode.rs  mod.rs  normal_texture_info.rs  occlusion_texture_info.rs  pbr_metallic_roughness.rs
crates/gltforge/src/schema/mesh/: mod.rs  primitive.rs  primitive_mode.rs
crates/gltforge/src/schema/sampler/: mag_filter.rs  min_filter.rs  mod.rs  wrap_mode.rs
crates/gltforge/src/schema/texture/: info.rs  mod.rs
crates/gltforge/tests/: box.rs  cesium_man.rs  damaged_helmet.rs  normal_tangent_mirror.rs  triangle.rs
docs/: extension-sdk.md  shader-variant-advisor.md
tools/: dump_verts.py
