[workspace]
members = [
    "crates/gltforge"
]
resolver = "3"

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/TonyMarkham/gltforge"
description = "A glTF 2.0 toolkit built for extensibility"

[workspace.dependencies]
error-location = { version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }