[workspace]
members = [
    "crates/gltforge",
    "crates/gltforge-cli",
    "crates/gltforge-unity",
]
resolver = "3"

[workspace.package]
version = "0.0.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/TonyMarkham/gltforge"
description = "A glTF 2.0 toolkit built for extensibility"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
error-location = { version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }

gltforge = { path = "crates/gltforge", version = "0.0.4" }