[package]
name = "gltforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tooling for glTF 2.0 assets"
readme.workspace = true

[[bin]]
name = "gltforge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
error-location = { workspace = true }
gltforge = { workspace = true }
thiserror = { workspace = true }
